--- a/css/styles.css
+++ b/css/styles.css
@@ -205,7 +205,7 @@ color: var(--header-email);
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: var(--about-subtitle); 
-    margin: 0;     
+    margin: 0 0 8px;     
 }
 .about-text {
     font-family: 'Roboto', sans-serif;
@@ -216,7 +216,7 @@ color: var(--header-email);
     flex: none;
     order: 1;
     flex-grow: 0;
-    margin: 8px 0;
+    margin: 0;
 }
 .about {
     padding-top: 0;
@@ -230,7 +230,9 @@ color: var(--header-email);
     letter-spacing: 0.02em;
     text-transform: capitalize;
     color: var(--promo-title);
-    margin: 0;
+    margin: 0 0 72px;
+}
+.promo-subject{
     gap: 24px;
 }
 .img {
@@ -251,8 +253,9 @@ color: var(--header-email);
 }
 .team-info{
     width: calc((100% - 72px)/4);
-    background-color: var(--section-team-background);
+    background-color: var(--header);
     display: block;
+    border-radius: 0px 0px 4px 4px;
 }
 .team-style{
     padding: 32px 0;
@@ -314,6 +317,7 @@ color: var(--header-email);
     background-color: var(--section-team-background);
     border: 1px solid var(--all-btn-bord);
     padding: 12px 24px;
+    border-radius: 4px;
     gap: 24px;    
 }
 .all-btn:hover {
@@ -331,7 +335,6 @@ color: var(--header-email);
     display: flex;
     flex-wrap: wrap;
     gap: 48px 24px;
-    margin-bottom: 120px;
 }
 .gallery-block {
     width: calc((100% - 48px)/3);
