--- a/css/styles.css
+++ b/css/styles.css
@@ -35,7 +35,7 @@ body{
     color: var(--body);
     font-size: 16px;
     line-height: 1.5;
-    
+    margin: 0;
 }
 .link {
     text-decoration: none;
